# march

./: .gitignore  AGENTS.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pages.yml
docs/: README.md  bootstrap.md  editors.md  index.md  packages.md  pacman-yay.md  tags.md  terminal.md  tips-tricks.md
docs/editors/: README.md  vscodium.md
docs/terminal/: .zshrc  README.md  kitty.md  zsh.md
dotfiles/: manifest.tsv
dotfiles/cline/Rules/: git-rules.md  github-cli.md
dotfiles/cline/Workflows/: prepare-commit.md  review-uncommitted.md
dotfiles/kitty/: current-theme.conf  kitty.conf
dotfiles/starship/: starship.toml
dotfiles/vscodium/: README.md  all-in-one.code-profile  extensions.txt  settings.json
dotfiles/zsh/: .zshrc
scripts/: AGENTS.md  bootstrap.sh  docs.sh  dotfiles.sh  export-all.sh  export-packages.sh  export-services.sh  export.sh  install-packages.sh  packages.sh  sync-dotfiles.sh  sync-zshrc.sh
terminal/: README.md  sync-zshrc.sh
