[project]
name = "march"
version = "0.0.0"
description = "Arch Linux setup notebook + toolbox (docs tooling)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocs-callouts",
  "mkdocs-git-revision-date-localized-plugin",
]

[tool.uv]
package = false
